@@ -62,6 +62,8 @@ importFrom(gtools, mixedsort)
 
 S3method(reorder, factor)
 
+S3method(summary, nPairs)
+
 ## drop.levels stuff
 S3method(drop.levels, default)
 S3method(drop.levels, factor)
